2003-08-05  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-flow-holder-blocks.c, cong-editor-area-flow-holder-inlines.c, cong-editor-node-comment.c, cong-editor-node-comment.h, cong-editor-node-document.c, cong-editor-node-document.h, cong-editor-node-dtd.c, cong-editor-node-dtd.h, cong-editor-node-element-span.c, cong-editor-node-element-span.h, cong-editor-node-element-structural.c, cong-editor-node-element-structural.h, cong-editor-node-element-unknown.c, cong-editor-node-element-unknown.h, cong-editor-node-element.c, cong-editor-node-element.h, cong-editor-node-entity-decl.c, cong-editor-node-entity-decl.h, cong-editor-node-text.c, cong-editor-node-text.h, cong-editor-node-unimplemented.c, cong-editor-node-unimplemented.h, cong-editor-node.c, cong-editor-node.h, cong-editor-widget.h, cong-editor-widget3.c, cong-plugin.c, cong-plugin.h, plugin-lists-node-element-listitem.c, plugin-lists-node-element-listitem.h, plugin-lists.c, plugin-paragraph-node-element-paragraph.c, plugin-paragraph-node-element-paragraph.h, plugin-paragraph.c

	Editor nodes now know about their traversal parent

	* cong-editor-area-entity-ref.c, cong-editor-area-entity-ref.h, cong-editor-node-entity-ref.c, cong-editor-node-entity-ref.h, Makefile.am

	New files: Rendering of entity references

	* cong-editor-area-text-fragment.c, cong-editor-node.c, cong-editor-widget3.c, cong-eel.c, cong-eel.h, cong-text-cache.c

	More work on comments and entities

	* cong-editor-area-entity-decl.c, cong-editor-area-entity-decl.h, cong-editor-area-text-comment.c, cong-editor-area-text-comment.h, cong-editor-node-comment.c, cong-editor-node-comment.h, cong-editor-node-dtd.c, cong-editor-node-dtd.h, cong-editor-node-entity-decl.c, cong-editor-node-entity-decl.h, Makefile.am

	Initial support for comments and entities in the new editor widget

2003-08-04  David Malcolm <david@davemalcolm.demon.co.uk>
